## top directory
ACLOCAL_AMFLAGS = -I m4

#Build in these directories:
SUBDIRS = $(GENERIC_LIBRARY_NAME) test 

#Distribute these directories:
DIST_SUBDIRS = $(GENERIC_LIBRARY_NAME) test doxydoc

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = metslib.pc

EXTRA_DIST = autogen.sh metslib.sln metslib.vcproj 
